--- a/client/package.json
+++ b/client/package.json
@@ -36,18 +36,22 @@
     "socket.io-client": "^2.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.0",
     "eslint-plugin-react": "^7.3.0",
     "eslint-plugin-require-path-exists": "^1.0.15",
     "file-loader": "^0.11.2",
+    "flow-bin": "^0.54.1",
+    "flow-typed": "^2.1.5",
     "jest": "^21.1.0",
     "jest-cli": "^21.1.0",
     "style-loader": "^0.18.2",
