Use babel's stage-0 to support modern ES syntax

--- a/client/package.json
+++ b/client/package.json
@@ -41,10 +41,9 @@
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.6.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.7.0",
     "eslint-plugin-react": "^7.3.0",
