--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,3 @@
 {
-    "plugins": ["transform-class-properties"],
-    "presets": ["flow", "env", "react"]
+    "presets": ["stage-0", "flow", "react"]
 }
